<resources>
    <string name="app_name">MealPlanner</string>
    <string name="shell_status">Android runnable implementation</string>
    <string name="label_date">Date</string>
    <string name="hint_date">2026-04-21</string>
    <string name="label_meal_type">Meal Type</string>
    <string name="label_calories">Calories</string>
    <string name="hint_calories">540</string>
    <string name="label_protein">Protein g</string>
    <string name="hint_protein">24</string>
    <string name="label_menu">Menu</string>
    <string name="hint_menu">Chicken salad bowl</string>
    <string name="label_memo">Memo</string>
    <string name="hint_memo">Meal note</string>
    <string name="button_save">Save Meal</string>
    <string name="button_sample">Insert Sample</string>
    <string name="button_clear">Clear Data</string>
    <string name="label_summary">Summary</string>
    <string name="label_records">Records</string>
</resources>
